Fixed from UI issues with spacing of containers

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,8 @@ input[type=submit] {
     border-radius: 100px;
     display: flex;
     flex-direction: column;
+    padding: 5%;
+    justify-content: center;
 }
 button {
     color: white;
@@ -80,4 +82,7 @@ h a {
 }
 .Developers {
     padding: 35px 15px 15px 15px;
+}
+.description {
+    font-size: 20px;
 }
